// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadButton renders a disabled button 1`] = `
<div>
  <button
    class="components-button woocommerce-table__download-button"
    disabled=""
    type="button"
  >
    <svg
      class="gridicon gridicons-cloud-download"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M18 9c-.009 0-.017.002-.025.003A6.496 6.496 0 005 9.5a6.5 6.5 0 00.186 1.519C5.123 11.016 5.064 11 5 11a4 4 0 00-4 4c0 1.202.541 2.267 1.38 3h18.593C22.196 17.089 23 15.643 23 14a5 5 0 00-5-5zm-6 7l-4-5h3V8h2v3h3l-4 5z"
        />
      </g>
    </svg>
    <span
      class="woocommerce-table__download-button__label"
    >
      Download
    </span>
  </button>
</div>
`;

exports[`DownloadButton renders an active button 1`] = `
<div>
  <button
    class="components-button woocommerce-table__download-button"
    type="button"
  >
    <svg
      class="gridicon gridicons-cloud-download"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M18 9c-.009 0-.017.002-.025.003A6.496 6.496 0 005 9.5a6.5 6.5 0 00.186 1.519C5.123 11.016 5.064 11 5 11a4 4 0 00-4 4c0 1.202.541 2.267 1.38 3h18.593C22.196 17.089 23 15.643 23 14a5 5 0 00-5-5zm-6 7l-4-5h3V8h2v3h3l-4 5z"
        />
      </g>
    </svg>
    <span
      class="woocommerce-table__download-button__label"
    >
      Download
    </span>
  </button>
</div>
`;
